fix aligned

--- a/components/Sponsor/HowItWorks/HowItWorks.module.scss
+++ b/components/Sponsor/HowItWorks/HowItWorks.module.scss
@@ -36,6 +36,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    justify-content: center;
     margin-top: 40px;
     width: 100%;
     position: relative;
@@ -72,6 +73,7 @@
 
     &-icon {
       margin: 0 40px;
+      margin-top: 88px;
       align-self: center;
     }
 
@@ -94,7 +96,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin-top: 32px;
+
         p {
           overflow: auto;
           display: flex;
